--- a/themes/landscape/_config.yml
+++ b/themes/landscape/_config.yml
@@ -1,7 +1,11 @@
 # Header
 menu:
-  Home: /
-  Archives: /archives
+  主页: /
+  分类: /categories
+  归档: /archives
+  标签: /tags
+  关于: /about
+
 rss: /atom.xml
 
 # Content
