开始写博客了（进行中）

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@
 # Site
 title: 3F
 subtitle: Fight For Freedom
-description: 好好学习掌握知识，多多考思提高认知。
+description: 好好学习掌握知识，多多省思提高认知。
 keywords: 知识, 认知
 author: ChenLiangtang
 language: 简体中文
