--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: 好好学习掌握知识，多多省思提高认知。
 keywords: 知识, 认知
 author: ChenLiangtang
 language: 简体中文
-timezone:
+timezone: Asia/Shanghai
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
